--- a/test_advrf.ipynb
+++ b/test_advrf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -232,19 +232,31 @@
     "print(f'Quintile={q}')\n",
     "\n",
     "# get data\n",
-    "df = pd.read_stata('../charitable_giving/Replication/AER merged.dta', convert_categoricals=False)\n",
-    "df = df.loc[(df['ratio'] == 0) | (df['ratio'] == 1)]\n",
-    "df = df.drop(['control', 'ratio', 'ratio2', 'ratio3',\n",
-    "            'size', 'size25', 'size50', 'size100', 'sizeno',\n",
-    "            'ask', 'askd1', 'askd2', 'askd3', 'ask1', 'ask2', 'ask3',\n",
-    "            'gave', 'amountchange', 'state50one', 'blue0'], axis=1)\n",
-    "# state50one just tags one (arbitrary?) observation for each state\n",
-    "# blue0 and red0 and perfectly collinear (when all variables are nonmissing); bluecty and redcty are not\n",
+    "df = pd.read_csv('https://raw.githubusercontent.com/gsbDBI/ExperimentData/master/Charitable/ProcessedData/charitable_withdummyvariables.csv', na_values=-999)\n",
+    "df = df.loc[df['treat_ratio2']!=1]\n",
+    "df = df.loc[df['treat_ratio3']!=1]\n",
+    "df = df.drop(['treat_ratio2', 'treat_ratio3', 'treat_size25', 'treat_size50',\n",
+    "                'treat_size100', 'treat_sizeno', 'treat_askd1', 'treat_askd2', 'treat_askd3',\n",
+    "                'out_changeamtgive', 'out_gavedum'], axis=1)\n",
     "df = df.dropna()\n",
-    "y = df['amount'].values\n",
+    "y = df['out_amountgive'].values\n",
     "X = df[['treatment', 'red0',\n",
     "        'hpa', 'year5', 'dormant', 'nonlit', 'cases', 'perbush', 'redcty', 'bluecty',\n",
-    "        'pwhite', 'pblack', 'page18_39', 'ave_hh_sz', 'median_hhincome', 'powner', 'psch_atlstba', 'pop_propurban']].values"
+    "        'pwhite', 'pblack', 'page18_39', 'ave_hh_sz', 'median_hhincome', 'powner', 'psch_atlstba', 'pop_propurban']]\n",
+    "\n",
+    "# df = pd.read_stata('../charitable_giving/Replication/AER merged.dta', convert_categoricals=False)\n",
+    "# df = df.loc[(df['ratio'] == 0) | (df['ratio'] == 1)]\n",
+    "# df = df.drop(['control', 'ratio', 'ratio2', 'ratio3',\n",
+    "#             'size', 'size25', 'size50', 'size100', 'sizeno',\n",
+    "#             'ask', 'askd1', 'askd2', 'askd3', 'ask1', 'ask2', 'ask3',\n",
+    "#             'gave', 'amountchange', 'state50one', 'blue0'], axis=1)\n",
+    "# # state50one just tags one (arbitrary?) observation for each state\n",
+    "# # blue0 and red0 and perfectly collinear (when all variables are nonmissing); bluecty and redcty are not\n",
+    "# df = df.dropna()\n",
+    "# y = df['amount'].values\n",
+    "# X = df[['treatment', 'red0',\n",
+    "#         'hpa', 'year5', 'dormant', 'nonlit', 'cases', 'perbush', 'redcty', 'bluecty',\n",
+    "#         'pwhite', 'pblack', 'page18_39', 'ave_hh_sz', 'median_hhincome', 'powner', 'psch_atlstba', 'pop_propurban']].values"
    ]
   },
   {
