final small update to notebook

--- a/test_advrf.ipynb
+++ b/test_advrf.ipynb
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -413,6 +413,19 @@
      "text": [
       "9848 9804\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'point': 7489.894500144199,\n",
+       " 'stderr': 1116.3064149611787,\n",
+       " 'lower': 5301.703958403848,\n",
+       " 'upper': 9678.085041884551}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
