--- a/test_advrf.ipynb
+++ b/test_advrf.ipynb
@@ -320,7 +320,7 @@
     "y = df['out_amountgive'].values\n",
     "X = df[['treatment', 'red0',\n",
     "        'hpa', 'year5', 'dormant', 'nonlit', 'cases', 'perbush', 'redcty', 'bluecty',\n",
-    "        'pwhite', 'pblack', 'page18_39', 'ave_hh_sz', 'median_hhincome', 'powner', 'psch_atlstba', 'pop_propurban']]\n",
+    "        'pwhite', 'pblack', 'page18_39', 'ave_hh_sz', 'median_hhincome', 'powner', 'psch_atlstba', 'pop_propurban']].values\n",
     "\n",
     "# df = pd.read_stata('../charitable_giving/Replication/AER merged.dta', convert_categoricals=False)\n",
     "# df = df.loc[(df['ratio'] == 0) | (df['ratio'] == 1)]\n",
