--- a/test_advrf.ipynb
+++ b/test_advrf.ipynb
@@ -317,7 +317,7 @@
     "# state50one just tags one (arbitrary?) observation for each state\n",
     "# blue0 and red0 and perfectly collinear (when all variables are nonmissing); bluecty and redcty are not\n",
     "df = df.dropna()\n",
-    "y = df['out_amountgive'].values\n",
+    "y = df['amount'].values\n",
     "X = df[['treatment', 'red0',\n",
     "        'hpa', 'year5', 'dormant', 'nonlit', 'cases', 'perbush', 'redcty', 'bluecty',\n",
     "        'pwhite', 'pblack', 'page18_39', 'ave_hh_sz', 'median_hhincome', 'powner', 'psch_atlstba', 'pop_propurban']].values\n",
