--- a/test_advrf.ipynb
+++ b/test_advrf.ipynb
@@ -323,14 +323,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'point': 0.03209882912678053,\n",
+       " 'stderr': 0.04315199065605484,\n",
+       " 'lower': -0.05248223371835182,\n",
+       " 'upper': 0.11667989197191289}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def get_rf_fn(X):\n",
     "    return lambda: AdvEnsembleReisz(moment_fn=moment_fn, \n",
     "                                    n_treatments=2,\n",
-    "                                    max_abs_value=50,\n",
+    "                                    max_abs_value=100,\n",
     "                                    n_iter=200, degree=1)\n",
     "\n",
     "est = DebiasedMoment(moment_fn=moment_fn,\n",
@@ -351,9 +365,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quintile=0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\bsyrg\\Documents\\adversarial\\adversarial_reisz\\advreisz\\linear\\sparse_linear.py:175: UserWarning: Maximum number of iterations reached and duality gap tolerance not achieved. Consider increasing the maximum number of iterations.\n",
+      "  warnings.warn(\"Maximum number of iterations reached and duality gap tolerance not achieved. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "splin {'point': 0.35788935024603813, 'stderr': 0.19958023174406772, 'lower': -0.03330252450058994, 'upper': 0.7490812249926663}\n",
+      "nys_advrkhs {'point': 0.13005482024895, 'stderr': 0.11785745301315194, 'lower': -0.10095442146893849, 'upper': 0.3610640619668385}\n",
+      "plugin_lg {'point': 0.42058631619334097, 'stderr': 0.3500336150857545, 'lower': -0.2655052115754457, 'upper': 1.1066778439621276}\n",
+      "plugin_rf {'point': 0.16470654149969657, 'stderr': 0.1415930030372359, 'lower': -0.11282611704622043, 'upper': 0.44223920004561357}\n",
+      "advrf {'point': 0.03209882912678053, 'stderr': 0.04315199065605484, 'lower': -0.05248223371835182, 'upper': 0.11667989197191289}\n",
+      "{'splin': {'point': 0.35788935024603813, 'stderr': 0.19958023174406772, 'lower': -0.03330252450058994, 'upper': 0.7490812249926663}, 'splin_tmle': {'point': 0.469975964399789, 'stderr': 0.1995151696932699, 'lower': 0.07891161603893584, 'upper': 0.8610403127606421}, 'nys_advrkhs': {'point': 0.13005482024895, 'stderr': 0.11785745301315194, 'lower': -0.10095442146893849, 'upper': 0.3610640619668385}, 'nys_advrkhs_tmle': {'point': -0.0008790653037641873, 'stderr': 0.1178575669326158, 'lower': -0.2318885303121472, 'upper': 0.23013039970461882}, 'plugin_lg': {'point': 0.42058631619334097, 'stderr': 0.3500336150857545, 'lower': -0.2655052115754457, 'upper': 1.1066778439621276}, 'plugin_lg_tmle': {'point': 0.3990369388183993, 'stderr': 0.3504151649507487, 'lower': -0.2878024546367436, 'upper': 1.085876332273542}, 'plugin_rf': {'point': 0.16470654149969657, 'stderr': 0.1415930030372359, 'lower': -0.11282611704622043, 'upper': 0.44223920004561357}, 'plugin_rf_tmle': {'point': 754.6644665444937, 'stderr': 63.26457388713286, 'lower': 630.6612671911105, 'upper': 878.6676658978771}, 'advrf': {'point': 0.03209882912678053, 'stderr': 0.04315199065605484, 'lower': -0.05248223371835182, 'upper': 0.11667989197191289}, 'advrf_tmle': {'point': 0.00752786890107122, 'stderr': 0.043142615522785165, 'lower': -0.07703481799606411, 'upper': 0.09209055579820656}}\n"
+     ]
+    }
+   ],
    "source": [
     "n_splits = 1\n",
     "res = {}\n",
@@ -391,9 +433,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>point</th>\n",
+       "      <th>stderr</th>\n",
+       "      <th>lower</th>\n",
+       "      <th>upper</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"10\" valign=\"top\">q=0</th>\n",
+       "      <th>splin</th>\n",
+       "      <td>0.357889</td>\n",
+       "      <td>0.199580</td>\n",
+       "      <td>-0.033303</td>\n",
+       "      <td>0.749081</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>splin_tmle</th>\n",
+       "      <td>0.469976</td>\n",
+       "      <td>0.199515</td>\n",
+       "      <td>0.078912</td>\n",
+       "      <td>0.861040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>nys_advrkhs</th>\n",
+       "      <td>0.130055</td>\n",
+       "      <td>0.117857</td>\n",
+       "      <td>-0.100954</td>\n",
+       "      <td>0.361064</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>nys_advrkhs_tmle</th>\n",
+       "      <td>-0.000879</td>\n",
+       "      <td>0.117858</td>\n",
+       "      <td>-0.231889</td>\n",
+       "      <td>0.230130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>plugin_lg</th>\n",
+       "      <td>0.420586</td>\n",
+       "      <td>0.350034</td>\n",
+       "      <td>-0.265505</td>\n",
+       "      <td>1.106678</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>plugin_lg_tmle</th>\n",
+       "      <td>0.399037</td>\n",
+       "      <td>0.350415</td>\n",
+       "      <td>-0.287802</td>\n",
+       "      <td>1.085876</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>plugin_rf</th>\n",
+       "      <td>0.164707</td>\n",
+       "      <td>0.141593</td>\n",
+       "      <td>-0.112826</td>\n",
+       "      <td>0.442239</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>plugin_rf_tmle</th>\n",
+       "      <td>754.664467</td>\n",
+       "      <td>63.264574</td>\n",
+       "      <td>630.661267</td>\n",
+       "      <td>878.667666</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>advrf</th>\n",
+       "      <td>0.032099</td>\n",
+       "      <td>0.043152</td>\n",
+       "      <td>-0.052482</td>\n",
+       "      <td>0.116680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>advrf_tmle</th>\n",
+       "      <td>0.007528</td>\n",
+       "      <td>0.043143</td>\n",
+       "      <td>-0.077035</td>\n",
+       "      <td>0.092091</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           point     stderr       lower       upper\n",
+       "q=0 splin               0.357889   0.199580   -0.033303    0.749081\n",
+       "    splin_tmle          0.469976   0.199515    0.078912    0.861040\n",
+       "    nys_advrkhs         0.130055   0.117857   -0.100954    0.361064\n",
+       "    nys_advrkhs_tmle   -0.000879   0.117858   -0.231889    0.230130\n",
+       "    plugin_lg           0.420586   0.350034   -0.265505    1.106678\n",
+       "    plugin_lg_tmle      0.399037   0.350415   -0.287802    1.085876\n",
+       "    plugin_rf           0.164707   0.141593   -0.112826    0.442239\n",
+       "    plugin_rf_tmle    754.664467  63.264574  630.661267  878.667666\n",
+       "    advrf               0.032099   0.043152   -0.052482    0.116680\n",
+       "    advrf_tmle          0.007528   0.043143   -0.077035    0.092091"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "res"
    ]
