--- a/test_advrf.ipynb
+++ b/test_advrf.ipynb
@@ -572,9 +572,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9848 9804\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'point': 7489.894500144199,\n",
+       " 'stderr': 1116.3064149611787,\n",
+       " 'lower': 5301.703958403848,\n",
+       " 'upper': 9678.085041884551}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def moment_fn(x, test_fn):\n",
     "    n_obs = x.shape[0]\n",
@@ -624,6 +645,177 @@
     "p, s, l, u = est.avg_moment()\n",
     "{'point': p * y_scale, 'stderr': s * y_scale, 'lower': l * y_scale, 'upper': u * y_scale}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quintile=0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\bsyrg\\Documents\\adversarial\\adversarial_reisz\\advreisz\\linear\\sparse_linear.py:175: UserWarning: Maximum number of iterations reached and duality gap tolerance not achieved. Consider increasing the maximum number of iterations.\n",
+      "  warnings.warn(\"Maximum number of iterations reached and duality gap tolerance not achieved. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "splin {'point': 7797.382835248444, 'stderr': 1040.2336841988708, 'lower': 5758.310517418176, 'upper': 9836.455153078712}\n",
+      "nys_advrkhs {'point': 7642.738472013803, 'stderr': 1123.2507232153064, 'lower': 5440.93565551004, 'upper': 9844.541288517566}\n",
+      "advrf {'point': 7489.894500144199, 'stderr': 1116.3064149611787, 'lower': 5301.703958403848, 'upper': 9678.085041884551}\n",
+      "{'splin': {'point': 7797.382835248444, 'stderr': 1040.2336841988708, 'lower': 5758.310517418176, 'upper': 9836.455153078712}, 'splin_tmle': {'point': 7807.1941498693905, 'stderr': 1040.4668854910922, 'lower': 5767.664709464961, 'upper': 9846.723590273821}, 'nys_advrkhs': {'point': 7642.738472013803, 'stderr': 1123.2507232153064, 'lower': 5440.93565551004, 'upper': 9844.541288517566}, 'nys_advrkhs_tmle': {'point': 7644.322691514144, 'stderr': 1123.5401525565867, 'lower': 5441.952533876617, 'upper': 9846.69284915167}, 'advrf': {'point': 7489.894500144199, 'stderr': 1116.3064149611787, 'lower': 5301.703958403848, 'upper': 9678.085041884551}, 'advrf_tmle': {'point': 7502.701409904193, 'stderr': 1116.0393438599626, 'lower': 5315.0343825410955, 'upper': 9690.36843726729}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_splits = 1\n",
+    "res = {}\n",
+    "q=0  # Data not split up into quantiles\n",
+    "res[f'q={q}'] = {}\n",
+    "print(f'Quintile={q}')\n",
+    "\n",
+    "for name, get_reisz_fn in [\n",
+    "                            ('splin', get_splin_fn),\n",
+    "                            # ('advrkhs', get_advkernel_fn),\n",
+    "                            # # ('rkhs', get_kernel_fn),\n",
+    "                            ('nys_advrkhs', get_advnyskernel_fn),\n",
+    "                            # # ('nys_rkhs', get_nyskernel_fn),\n",
+    "                            # ('advnnet', get_agmm_fn),\n",
+    "                            ('advrf', get_rf_fn)\n",
+    "                            ]:\n",
+    "    est = DebiasedMoment(moment_fn=moment_fn,\n",
+    "                            get_reisz_fn=get_reisz_fn,\n",
+    "                            get_reg_fn=get_reg_fn, n_splits=n_splits)\n",
+    "    est.fit(X, y)\n",
+    "    p, s, l, u = est.avg_moment()\n",
+    "    res[f'q={q}'][name] = {'point': p * y_scale, 'stderr': s * y_scale,\n",
+    "                            'lower': l * y_scale, 'upper': u * y_scale}\n",
+    "    p, s, l, u = est.avg_moment(tmle=True)\n",
+    "    res[f'q={q}'][f'{name}_tmle'] = {'point': p * y_scale, 'stderr': s * y_scale,\n",
+    "                                        'lower': l * y_scale, 'upper': u * y_scale}\n",
+    "    print(name, res[f'q={q}'][name])\n",
+    "\n",
+    "print(res[f'q={q}'])\n",
+    "res[f'q={q}'] = pd.DataFrame(res[f'q={q}']).transpose()\n",
+    "res = pd.concat(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>point</th>\n",
+       "      <th>stderr</th>\n",
+       "      <th>lower</th>\n",
+       "      <th>upper</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"6\" valign=\"top\">q=0</th>\n",
+       "      <th>splin</th>\n",
+       "      <td>7797.382835</td>\n",
+       "      <td>1040.233684</td>\n",
+       "      <td>5758.310517</td>\n",
+       "      <td>9836.455153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>splin_tmle</th>\n",
+       "      <td>7807.194150</td>\n",
+       "      <td>1040.466885</td>\n",
+       "      <td>5767.664709</td>\n",
+       "      <td>9846.723590</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>nys_advrkhs</th>\n",
+       "      <td>7642.738472</td>\n",
+       "      <td>1123.250723</td>\n",
+       "      <td>5440.935656</td>\n",
+       "      <td>9844.541289</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>nys_advrkhs_tmle</th>\n",
+       "      <td>7644.322692</td>\n",
+       "      <td>1123.540153</td>\n",
+       "      <td>5441.952534</td>\n",
+       "      <td>9846.692849</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>advrf</th>\n",
+       "      <td>7489.894500</td>\n",
+       "      <td>1116.306415</td>\n",
+       "      <td>5301.703958</td>\n",
+       "      <td>9678.085042</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>advrf_tmle</th>\n",
+       "      <td>7502.701410</td>\n",
+       "      <td>1116.039344</td>\n",
+       "      <td>5315.034383</td>\n",
+       "      <td>9690.368437</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            point       stderr        lower        upper\n",
+       "q=0 splin             7797.382835  1040.233684  5758.310517  9836.455153\n",
+       "    splin_tmle        7807.194150  1040.466885  5767.664709  9846.723590\n",
+       "    nys_advrkhs       7642.738472  1123.250723  5440.935656  9844.541289\n",
+       "    nys_advrkhs_tmle  7644.322692  1123.540153  5441.952534  9846.692849\n",
+       "    advrf             7489.894500  1116.306415  5301.703958  9678.085042\n",
+       "    advrf_tmle        7502.701410  1116.039344  5315.034383  9690.368437"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
