Corrected Results.ipynb

--- a/Results.ipynb
+++ b/Results.ipynb
@@ -4,7 +4,8 @@
       "cell_type": "code",
       "source": [
         "# Clone GitHub repo\n",
-        "!git clone https://github.com/vsyrgkanis/adversarial_reisz.git\n",
+        "# !git clone https://github.com/vsyrgkanis/adversarial_reisz.git\n",
+        "\n",
         "%cd adversarial_reisz\n",
         "# !git checkout charitable-giving"
       ],
@@ -13,7 +14,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c792d192-bee3-4a78-f041-f47fb7a2ea20"
+        "outputId": "e06a5c4e-2533-4687-c5b6-cc8b2d833baf"
       },
       "execution_count": null,
       "outputs": [
@@ -22,15 +23,13 @@
           "name": "stdout",
           "text": [
             "Cloning into 'adversarial_reisz'...\n",
-            "remote: Enumerating objects: 479, done.\u001b[K\n",
-            "remote: Counting objects: 100% (166/166), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (106/106), done.\u001b[K\n",
-            "remote: Total 479 (delta 87), reused 121 (delta 60), pack-reused 313\u001b[K\n",
-            "Receiving objects: 100% (479/479), 9.95 MiB | 25.78 MiB/s, done.\n",
-            "Resolving deltas: 100% (248/248), done.\n",
-            "/content/adversarial_reisz\n",
-            "Branch 'charitable-giving' set up to track remote branch 'charitable-giving' from 'origin'.\n",
-            "Switched to a new branch 'charitable-giving'\n"
+            "remote: Enumerating objects: 312, done.\u001b[K\n",
+            "remote: Counting objects: 100% (63/63), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (7/7), done.\u001b[K\n",
+            "remote: Total 312 (delta 56), reused 56 (delta 56), pack-reused 249\u001b[K\n",
+            "Receiving objects: 100% (312/312), 9.19 MiB | 18.77 MiB/s, done.\n",
+            "Resolving deltas: 100% (161/161), done.\n",
+            "/content/adversarial_reisz\n"
           ]
         }
       ]
@@ -57,7 +56,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "39e98847-0717-4ed9-bec5-853ff5225185"
+        "outputId": "8515d743-774c-416c-c1e1-498d9ad15084"
       },
       "execution_count": null,
       "outputs": [
@@ -67,19 +66,19 @@
           "text": [
             "Collecting econml\n",
             "  Downloading econml-0.14.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.5 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.5/3.5 MB\u001b[0m \u001b[31m38.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.5/3.5 MB\u001b[0m \u001b[31m34.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from econml) (1.23.5)\n",
             "Requirement already satisfied: scipy>1.4.0 in /usr/local/lib/python3.10/dist-packages (from econml) (1.11.4)\n",
             "Requirement already satisfied: scikit-learn<1.3,>0.22.0 in /usr/local/lib/python3.10/dist-packages (from econml) (1.2.2)\n",
             "Collecting sparse (from econml)\n",
             "  Downloading sparse-0.14.0-py2.py3-none-any.whl (80 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m81.0/81.0 kB\u001b[0m \u001b[31m10.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m81.0/81.0 kB\u001b[0m \u001b[31m12.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: joblib>=0.13.0 in /usr/local/lib/python3.10/dist-packages (from econml) (1.3.2)\n",
             "Requirement already satisfied: statsmodels>=0.10 in /usr/local/lib/python3.10/dist-packages (from econml) (0.14.0)\n",
             "Requirement already satisfied: pandas in /usr/local/lib/python3.10/dist-packages (from econml) (1.5.3)\n",
             "Collecting shap<0.42.0,>=0.38.1 (from econml)\n",
             "  Downloading shap-0.41.0-cp310-cp310-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (572 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m572.6/572.6 kB\u001b[0m \u001b[31m51.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m572.6/572.6 kB\u001b[0m \u001b[31m52.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: lightgbm in /usr/local/lib/python3.10/dist-packages (from econml) (4.1.0)\n",
             "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn<1.3,>0.22.0->econml) (3.2.0)\n",
             "Requirement already satisfied: tqdm>4.25.0 in /usr/local/lib/python3.10/dist-packages (from shap<0.42.0,>=0.38.1->econml) (4.66.1)\n",
@@ -88,7 +87,7 @@
             "  Downloading slicer-0.0.7-py3-none-any.whl (14 kB)\n",
             "Requirement already satisfied: numba in /usr/local/lib/python3.10/dist-packages (from shap<0.42.0,>=0.38.1->econml) (0.58.1)\n",
             "Requirement already satisfied: cloudpickle in /usr/local/lib/python3.10/dist-packages (from shap<0.42.0,>=0.38.1->econml) (2.2.1)\n",
-            "Requirement already satisfied: patsy>=0.5.2 in /usr/local/lib/python3.10/dist-packages (from statsmodels>=0.10->econml) (0.5.3)\n",
+            "Requirement already satisfied: patsy>=0.5.2 in /usr/local/lib/python3.10/dist-packages (from statsmodels>=0.10->econml) (0.5.4)\n",
             "Requirement already satisfied: python-dateutil>=2.8.1 in /usr/local/lib/python3.10/dist-packages (from pandas->econml) (2.8.2)\n",
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas->econml) (2023.3.post1)\n",
             "Requirement already satisfied: llvmlite<0.42,>=0.41.0dev0 in /usr/local/lib/python3.10/dist-packages (from numba->shap<0.42.0,>=0.38.1->econml) (0.41.1)\n",
@@ -109,7 +108,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c75e0b8e-213f-4dfa-f5c3-2d063864fbd2"
+        "outputId": "712cf20d-7500-4b91-f4f2-b17eecfb34b4"
       },
       "execution_count": null,
       "outputs": [
@@ -156,7 +155,7 @@
             "Creating /usr/local/lib/python3.10/dist-packages/advreisz.egg-link (link to .)\n",
             "Adding advreisz 0.0.1 to easy-install.pth file\n",
             "\n",
-            "Installed /content\n",
+            "Installed /content/adversarial_reisz\n",
             "Processing dependencies for advreisz==0.0.1\n",
             "Finished processing dependencies for advreisz==0.0.1\n"
           ]
@@ -168,18 +167,34 @@
       "execution_count": null,
       "metadata": {
         "id": "Jsgw7d2oJUcm",
-        "outputId": "de89f18f-87f4-4daa-fe97-11e287595114",
+        "outputId": "6ef0758f-5c11-4b4d-9eff-09873a929b39",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 420
         }
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "GPU: True\n"
-          ]
+          "output_type": "error",
+          "ename": "ImportError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-6-67bd8a3050c7>\u001b[0m in \u001b[0;36m<cell line: 32>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0madvreisz\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkernel\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mAdvNystromKernelReisz\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mAdvKernelReisz\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mNystromKernelReisz\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mKernelReisz\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0madvreisz\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdeepreisz\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mAdvReisz\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0madvreisz\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mensemble\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mAdvEnsembleReisz\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mAdvEnsembleReiszRegVariant\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mRFrr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minteractive_poly_feature_fns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mutilities\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mAutoKernel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprod_kernel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mPluginRR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mPluginRR2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFitParamsWrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mImportError\u001b[0m: cannot import name 'AdvEnsembleReiszRegVariant' from 'advreisz.ensemble' (/content/adversarial_reisz/advreisz/ensemble/__init__.py)",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ],
+          "errorDetails": {
+            "actions": [
+              {
+                "action": "open_url",
+                "actionText": "Open Examples",
+                "url": "/notebooks/snippets/importing_libraries.ipynb"
+              }
+            ]
+          }
         }
       ],
       "source": [
@@ -763,15 +778,15 @@
         "    pluginlg_experiments(n_samples_list, dgp=dgp, target_dir=target_dir, sample_its=sample_its, n_jobs=n_jobs, gcv_reg=gcv)\n",
         "    pluginrf_experiments(n_samples_list, dgp=dgp, target_dir=target_dir, sample_its=sample_its, n_jobs=n_jobs, gcv_reg=gcv)\n",
         "    splin_experiments(n_samples_list, dgp=dgp, target_dir=target_dir, sample_its=sample_its, n_jobs=n_jobs, gcv_reg=gcv)\n",
-        "    nystrom_advkernel_experiments_1000(n_samples_list, dgp=dgp, target_dir=target_dir, sample_its=sample_its, n_jobs=n_jobs, gcv_reg=gcv)\n",
-        "    nystrom_advkernel_experiments(n_samples_list, dgp=dgp, target_dir=target_dir, sample_its=sample_its, n_jobs=n_jobs, gcv_reg=gcv)\n",
+        "    advkernel_experiments(n_samples_list, dgp=dgp, target_dir=target_dir, kernelid=2, sample_its=sample_its, n_jobs=n_jobs, gcv_reg=gcv)\n",
+        "    nystrom_advkernel_experiments(n_samples_list, dgp=dgp, target_dir=target_dir, kernelid=2, sample_its=sample_its, n_jobs=n_jobs, gcv_reg=gcv)\n",
         "    rf_experiments(n_samples_list, dgp=dgp, target_dir=target_dir, sample_its=sample_its, n_jobs=n_jobs, gcv_reg=gcv)\n",
         "    nnet_experiments(n_samples_list, dgp=dgp, target_dir=target_dir, sample_its=sample_its, n_jobs=n_jobs, gcv_reg=gcv)\n",
         "\n",
         "    res = [pluginlg_postprocess(n_samples_list, dgp=dgp, target_dir=target_dir, sample_its=sample_its),\n",
         "           pluginrf_postprocess(n_samples_list, dgp=dgp, target_dir=target_dir, sample_its=sample_its),\n",
         "           splin_postprocess(n_samples_list, dgp=dgp, target_dir=target_dir, sample_its=sample_its),\n",
-        "           nystrom_advkernel_postprocess_1000(n_samples_list, dgp=dgp, target_dir=target_dir, sample_its=sample_its),\n",
+        "           advkernel_postprocess(n_samples_list, dgp=dgp, target_dir=target_dir, sample_its=sample_its),\n",
         "           nystrom_advkernel_postprocess(n_samples_list, dgp=dgp, target_dir=target_dir, sample_its=sample_its),\n",
         "           rf_postprocess(n_samples_list, dgp=dgp, target_dir=target_dir, sample_its=sample_its),\n",
         "           nnet_postprocess(n_samples_list, dgp=dgp, target_dir=target_dir, sample_its=sample_its)]"
@@ -797,11 +812,11 @@
     {
       "cell_type": "code",
       "source": [
-        "do_analysis_charitable(target_dir = '', dgp = 1, n_samples_list = [1000], sample_its = 100, n_jobs = -1, gcv = True)\n",
-        "joblib.dump(res, f'synthetic_dgp1.joblib')"
+        "do_analysis_charitable_all(target_dir = '', dgp = 3, n_samples_list = [1000], sample_its = 100, n_jobs = -1, gcv = True)\n",
+        "joblib.dump(res, f'synthetic_dgp3.joblib')"
       ],
       "metadata": {
-        "id": "bxNRk6qvLv9w"
+        "id": "_ohZA4hwLwNz"
       },
       "execution_count": null,
       "outputs": []
@@ -809,11 +824,11 @@
     {
       "cell_type": "code",
       "source": [
-        "do_analysis_charitable_all(target_dir = '', dgp = 3, n_samples_list = [100], sample_its = 100, n_jobs = -1, gcv = True)\n",
-        "joblib.dump(res, f'synthetic_dgp3.joblib')"
+        "do_analysis_charitable(target_dir = '', dgp = 1, n_samples_list = [100], sample_its = 100, n_jobs = -1, gcv = True)\n",
+        "joblib.dump(res, f'synthetic_dgp1.joblib')"
       ],
       "metadata": {
-        "id": "_ohZA4hwLwNz"
+        "id": "bxNRk6qvLv9w"
       },
       "execution_count": null,
       "outputs": []
